# miniocr

./: .gitignore  LICENSE  README.md  pyproject.toml
miniocr/: __init__.py  ocr.py
