[build-system]
requires = ["setuptools>=61.0,<70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miniocr"
version = "0.0.4"
authors = [
  { name="Enrike Nur", email="enrike.nur@gmail.com" },
]
description = "A small OCR package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai",
    "aiohttp",
    "aiofiles",
    "pdf2image",
    "python-pptx",
    "Pillow"
]

[project.urls]
"Homepage" = "https://github.com/w95/miniocr"
"Bug Tracker" = "https://github.com/w95/miniocr/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["miniocr*"]
exclude = ["tests*"] 